--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <div class="list-group">
 
         <a [routerLink]="['/components']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-th-list"></i>&nbsp;{{ 'Component' | translate }}
+            <i class="fa fa-th-list"></i>&nbsp;{{ 'All Data' | translate }}
         </a>
 
         <div class="header-fields">
